reorganize presentation in other files

--- a/src/presentation.tex
+++ b/src/presentation.tex
@@ -72,62 +72,13 @@
 \maketitle
 
 \part{Part I}
+\input{part1}
 
-\section{Introduction}
+\part{Part II}
+\input{part2}
 
-\subsection{Index}
-
-\begin{frame}
-    \frametitle{Index}
-    \setbeamertemplate{section in toc}[sections numbered]
-    \tableofcontents[hideallsubsections, part=1]
-\end{frame}
-
-\begin{frame}
-    \frametitle{Slides}
-    \begin{center}
-        \includegraphics[width=.18\textwidth]{github}
-    \end{center}
-    The slides and all source code are hosted at \alert{GitHub}:
-
-    \begin{itemize}
-        \item \url{github.com/phrb/---}
-    \end{itemize}
-\end{frame}
-
-\begin{frame}[fragile]
-    \frametitle{Sample Code}
-    \begin{lstlisting}[basicstyle=\ttfamily\scriptsize]
-    #include <cuda_runtime.h>
-
-    float *h_A = (float *) malloc(size);
-    if (h_A == NULL) { ... };
-
-    float *d_A = NULL;
-    err = cudaMalloc((void **) &d_A, size);
-    err = cudaMemcpy(d_A, h_A, size, cudaMemcpyHostToDevice);
-    if (err != cudaSuccess) { ... };
-
-    int threadsPerBlock = 256;
-    int blocksPerGrid = (numElements + threadsPerBlock - 1) / threadsPerBlock;
-
-    vectorAdd<<<blocksPerGrid, threadsPerBlock>>>(d_A, d_B, d_C, numElements);
-
-    err = cudaGetLastError();
-    err = cudaDeviceSynchronize();
-    if (err != cudaSuccess) { ... };
-
-    err = cudaMemcpy(h_C, d_C, size, cudaMemcpyDeviceToHost);
-    err = cudaFree(d_A);
-    if (err != cudaSuccess) { ... };
-    \end{lstlisting}
-
-    \vfill
-
-    \begin{center}
-        \tiny{Fonte: \url{github.com/phrb/intro-cuda} [Accessed in 29/07/16]}
-    \end{center}
-\end{frame}
+\part{Part III}
+\input{part3}
 
 \maketitle
 
