use Open Sans as presentation font

--- a/src/presentation.tex
+++ b/src/presentation.tex
@@ -25,8 +25,8 @@
 \setbeamercolor{alerted text}{fg=Accent}
 \setbeamercolor{frametitle}{bg=Base}
 
-\setsansfont[BoldFont={Source Sans Pro Semibold},
-              Numbers={OldStyle}]{Source Sans Pro}
+\setsansfont[BoldFont={Open Sans},
+              Numbers={OldStyle}]{Open Sans}
 
 \lstset{ %
   backgroundcolor={},
