update my email address

--- a/src/presentation.tex
+++ b/src/presentation.tex
@@ -62,7 +62,7 @@
 
 \title{3D Real-time Indoor Localization via Broadband Nonlinear Backscatter}
 \author{\footnotesize Lucas Morais \\ {\scriptsize \emph{morais.lucas.h@gmail.com}} \\
-\footnotesize Lucas Kanashiro \\ {\scriptsize \emph{kanashiro.duarte@gmail.com}} \\
+\footnotesize Lucas Kanashiro \\ {\scriptsize \emph{lkd@ime.usp.br}} \\
 \footnotesize Pedro Bruel \\ {\scriptsize \emph{phrb@ime.usp.br}}}
 \institute{\includegraphics[height=2cm]{imelogo}\\[0.2cm] Instituto de Matemática e Estatística \\ Universidade de São Paulo}
 \date{\scriptsize \today}
