Minor fixes to Makefile and main tex file.
Add half of part 2 slides.

--- a/src/part1.tex
+++ b/src/part1.tex
@@ -1,9 +1,1 @@
-\section{Introduction}
-
-\subsection{Index}
-
-\begin{frame}
-    \frametitle{Index}
-    \setbeamertemplate{section in toc}[sections numbered]
-    \tableofcontents[hideallsubsections, part=1]
-\end{frame}
+\section{Introdução}
