--- a/src/presentation.tex
+++ b/src/presentation.tex
@@ -71,13 +71,36 @@
 
 \maketitle
 
-\part{Part I}
+\part{1}
+
+\section*{Slides}
+\begin{frame}
+    \frametitle{Slides}
+    \begin{center}
+        \includegraphics[width=.18\textwidth]{github}
+    \end{center}
+    Os \textit{slides} estão no \alert{GitHub}:
+
+    \begin{itemize}
+        \item \url{github.com/phrb/comp-movel-seminario}
+    \end{itemize}
+\end{frame}
+
+\section*{Roteiro}
+\begin{frame}
+    \frametitle{Roteiro}
+    \setbeamertemplate{section in toc}[sections numbered]
+    \tableofcontents[hideallsubsections,part=1]
+    \tableofcontents[hideallsubsections,part=2]
+    \tableofcontents[hideallsubsections,part=3]
+\end{frame}
+
 \input{part1}
 
-\part{Part II}
+\part{2}
 \input{part2}
 
-\part{Part III}
+\part{3}
 \input{part3}
 
 \maketitle
