--- a/src/part2.tex
+++ b/src/part2.tex
@@ -45,14 +45,14 @@
 
     \pause
     \begin{columns}[T,onlytextwidth]
-        \column{.333\textwidth}
+        \column{.25\textwidth}
         \begin{center}
             \includegraphics[width=\textwidth]{stapedius}
         \end{center}
 
         \pause
 
-        \column{.333\textwidth}
+        \column{.25\textwidth}
         \begin{center}
             \vfill
             \includegraphics[width=.8\textwidth]{mute}
@@ -60,9 +60,16 @@
 
         \pause
 
-        \column{.333\textwidth}
+        \column{.25\textwidth}
         \begin{center}
             \includegraphics[width=1\textwidth]{spectrum}
+        \end{center}
+
+        \pause
+
+        \column{.25\textwidth}
+        \begin{center}
+            \includegraphics[width=.76\textwidth]{doppler}
         \end{center}
     \end{columns}
 \end{frame}
@@ -86,22 +93,72 @@
 
 \section{Determinando a Variação de Frequências}
 \begin{frame}
-    \frametitle{Determinando a Variação de Frequências}
+    \frametitle{Determinando a Variação de Frequências: Intuição}
+    Problema:
+    \begin{itemize}
+        \item Como determinar corretamente a \alert{fase da reflexão}?
+    \end{itemize}
+    \begin{align*}
+        d_{i}&,d_{j}: \; \text{distância da tag às antenas $i$ e $j$} \\
+        \theta& \in [0, 2\pi)\\
+        d_{ij} & = d_i - d_j \\
+        d_{ij} & = \dfrac{\theta}{2\pi} \dfrac{\lambda}{2} + \alert{n} \dfrac{\lambda}{2}
+    \end{align*}
 
+    \pause
+
+    \begin{center}
+        \includegraphics[width=.45\textwidth]{wave}
+    \end{center}
 \end{frame}
 
 \begin{frame}
     \frametitle{Determinando a Variação de Frequências}
 
+    Solução do artigo:
+    \begin{itemize}
+        \item \alert{Emitir simultaneamente um conjunto de frequências}
+        \item \alert{Heuristic optimized continuous wave ranging} (HMFCW)
+    \end{itemize}
+
+    \pause
+
+    \metroset{block=fill}
+    \begin{block}{Provam que:}
+        Usando uma \alert{combinação de frequências} é possível calcular $\alert{n}$ corretamente,
+        desde que os \alert{erros de medição sejam limitados},
+        e que a \alert{largura de banda seja grande o suficiente}.
+    \end{block}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Determinando a Variação de Frequências}
+    Como determinar a combinação de frequências?
+    \begin{center}
+        \includegraphics[width=.8\textwidth]{gas}
+    \end{center}
 \end{frame}
 
 \section{Algoritmo de Localização 3D}
 \begin{frame}
     \frametitle{Algoritmo de Localização 3D}
+    Usando apenas \alert{duas antenas}:
 
+    \begin{center}
+        \includegraphics[width=.8\textwidth]{single-paraboloid}
+    \end{center}
 \end{frame}
 
 \begin{frame}
     \frametitle{Algoritmo de Localização 3D}
+    \begin{center}
+        \includegraphics[width=.45\textwidth]{multiple-paraboloids}
+    \end{center}
 
+    Como encontrar a \alert{intersecção dos paraboloides}?
+    \begin{itemize}
+        \item Método \alert{Nonlinear Conjugate Gradient}
+        \item Fórmula de \alert{Fletcher-Reeves}
+        \item \alert{Geração aleatória do ponto inicial}
+    \end{itemize}
 \end{frame}
