Adds images for the two first slides

--- a/src/part1.tex
+++ b/src/part1.tex
@@ -12,11 +12,52 @@
     \end{itemize}
 \end{frame}
 
+\section{E para que serve isso?}
+
 \begin{frame}
-  \frametitle{E para que serve isso?}
+  \begin{center}
+    \Huge E para que serve isso?
+  \end{center}
+\end{frame}
 
-  
+\begin{frame}
+  \frametitle{Interação homem-máquina}
+  \begin{itemize}
+    \item  Controle/monitoração de braços robóticos
+  \end{itemize}
 
+  \begin{center}
+    \includegraphics[width=.8\textwidth]{robot-arm}
+  \end{center}
+  %TODO
+\end{frame}
+
+\begin{frame}
+  \frametitle{Interação homem-máquina}
+  \begin{itemize}
+    \item  Carros autônomos
+  \end{itemize}
+
+  \begin{center}
+    \includegraphics[width=\textwidth]{autopilot}
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Jogos / Realidade aumentada}
+  \begin{itemize}
+    \item  Kinect
+    \item  Wii
+  \end{itemize}
+  %TODO
+\end{frame}
+
+\begin{frame}
+  \frametitle{Aplicações comerciais}
+  \begin{itemize}
+    \item  Amazon store
+    \item  Controle de estoque
+  \end{itemize}
   %TODO
 \end{frame}
 
