Make package 'caption' be used; adds remaining images

--- a/src/presentation.tex
+++ b/src/presentation.tex
@@ -15,6 +15,7 @@
 \usepackage{url}
 \usepackage{relsize}
 \usepackage{wasysym}
+\usepackage{caption}
 
 \usepackage{pgfplots}
 \usepgfplotslibrary{dateplot}
