--- a/src/part1.tex
+++ b/src/part1.tex
@@ -1,5 +1,6 @@
 \section{Introdução}
 
+
 \begin{frame}
   \frametitle{\emph{Main Achievement} deste trabalho}
 
@@ -22,21 +23,16 @@
 
 \begin{frame}
   \frametitle{Interação homem-máquina}
-  \begin{itemize}
-    \item  Controle/monitoração de braços robóticos
-  \end{itemize}
+  Controle/monitoração de braços robóticos
 
   \begin{center}
     \includegraphics[width=.8\textwidth]{robot-arm}
   \end{center}
-  %TODO
 \end{frame}
 
 \begin{frame}
   \frametitle{Interação homem-máquina}
-  \begin{itemize}
-    \item  Carros autônomos
-  \end{itemize}
+  Carros autônomos
 
   \begin{center}
     \includegraphics[width=\textwidth]{autopilot}
@@ -45,20 +41,45 @@
 
 \begin{frame}
   \frametitle{Jogos / Realidade aumentada}
-  \begin{itemize}
-    \item  Kinect
-    \item  Wii
-  \end{itemize}
-  %TODO
+    \begin{columns}[T,onlytextwidth]
+        \column{.5\textwidth}
+					\begin{figure}
+							\includegraphics[width=\textwidth]{kinect}
+						\captionsetup{labelformat=empty}
+						\caption{Kinect motion sensor}
+					\end{figure}
+
+        \column{.5\textwidth}
+					\begin{figure}
+							\includegraphics[width=0.5\textwidth]{wii-controller-more}
+						\captionsetup{labelformat=empty}
+						\caption{Controles Wii}
+					\end{figure}
+    \end{columns}
 \end{frame}
 
 \begin{frame}
   \frametitle{Aplicações comerciais}
-  \begin{itemize}
-    \item  Amazon store
-    \item  Controle de estoque
-  \end{itemize}
-  %TODO
+    %\begin{columns}[T,onlytextwidth]
+        %\column{.5\textwidth}
+					\begin{figure}
+							\includegraphics[width=\textwidth]{amazon-robots}
+						\captionsetup{labelformat=empty}
+						\caption{Robôs de distribuição Amazon}
+					\end{figure}
+    %\end{columns}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Aplicações comerciais}
+    %\begin{columns}[T,onlytextwidth]
+        %\column{.5\textwidth}
+					\begin{figure}
+							\includegraphics[width=\textwidth]{amazon-go-customer}
+						\captionsetup{labelformat=empty}
+						\caption{Amazon Go}
+					\end{figure}
+    %\end{columns}
 \end{frame}
 
 \begin{frame}
@@ -82,7 +103,11 @@
     \item  Não funcionam em ambientes com obstáculos
   \end{itemize}
 
-  %TODO: Adicionar figura
+	\begin{figure}
+			\includegraphics[width=0.8\textwidth]{kinect-diagram}
+		\captionsetup{labelformat=empty}
+		\caption{Diagrama de um Kinect}
+	\end{figure}
 \end{frame}
 
 
