Transform text preceeding some images into captions; improve Main Achievement Slide text

--- a/src/part1.tex
+++ b/src/part1.tex
@@ -4,7 +4,7 @@
 \begin{frame}
   \frametitle{\emph{Main Achievement} deste trabalho}
 
-    Monitorar a posição de qualquer objeto no espaço usando RF-ID.
+    Desenvolvimento de uma técnica para \alert{monitorar a posição de qualquer objeto no espaço usando RF-ID}.
 
     \begin{itemize}
       \item Com \alert{alta precisão} (erro de 3.5 cm)
@@ -23,20 +23,18 @@
 
 \begin{frame}
   \frametitle{Interação homem-máquina}
-  Controle/monitoração de braços robóticos
-
-  \begin{center}
+  \begin{figure}
     \includegraphics[width=.8\textwidth]{robot-arm}
-  \end{center}
+		\caption*{Controle / monitoração de braços robóticos}
+  \end{figure}
 \end{frame}
 
 \begin{frame}
   \frametitle{Interação homem-máquina}
-  Carros autônomos
-
-  \begin{center}
+  \begin{figure}
     \includegraphics[width=\textwidth]{autopilot}
-  \end{center}
+		\caption*{\emph{Environment-sensing} em carros autônomos}
+  \end{figure}
 \end{frame}
 
 \begin{frame}
