Add alerts to last slide from part I

--- a/src/part1.tex
+++ b/src/part1.tex
@@ -114,9 +114,9 @@
 
   Vantagens
   \begin{itemize}
-    \item  Tags são muito baratas ($0.1 \sim 0.2$ dólares)!
-    \item  Técnica funciona mesmo com obstáculos
-    \item  Menor complexidade computacional!
+    \item  \alert{Tags são muito baratas} ($0.1 \sim 0.2$ dólares)!
+    \item  Técnica \alert{funciona mesmo com obstáculos}
+    \item  \alert{Menor complexidade computacional}!
   \end{itemize}
 
   Problemas do estado-da-arte que a técnica que apresentaremos supera
