Renames kinect.jpg to kinect-medium.jpg

--- a/src/part1.tex
+++ b/src/part1.tex
@@ -42,7 +42,7 @@
     \begin{columns}[T,onlytextwidth]
         \column{.5\textwidth}
 					\begin{figure}
-							\includegraphics[width=\textwidth]{kinect}
+							\includegraphics[width=\textwidth]{kinect-medium}
 						\captionsetup{labelformat=empty}
 						\caption{Kinect motion sensor}
 					\end{figure}
