--- a/src/part3.tex
+++ b/src/part3.tex
@@ -1,10 +1,6 @@
 \section{Avaliação experimental}
 
-\begin{frame}
-  \begin{center}
-    \Huge Avaliação Experimental
-        \end{center}
-\end{frame}
+\plain{Avaliação Experimental}
 
 \subsection{Testbed}
 
