Minor fixes for presenting.

--- a/src/part1.tex
+++ b/src/part1.tex
@@ -20,17 +20,18 @@
 
     \begin{itemize}
       \item Com \alert{alta precisão} (erro de $3.5$cm)
-      \item Em \alert{tempo real}
+      \item Em \alert{tempo real}: latência de $0.155$s
       \item Funciona em \alert{ambientes fechados e cheios de objetos}
+      \item \alert{Não requer movimento relativo} ou \alert{nós de referência}
     \end{itemize}
 
     Hardware \& software co-design:
 
     \begin{itemize}
-        \item Combinação de frequências
-        \item Modificações no algoritmo HMFCW
-        \item Algoritmo de Localização 3D
-        \item Tag RFID não-linear
+        \item \alert{Combinação de frequências}
+        \item \alert{Modificações no algoritmo HMFCW} (heuristic optimized continuous wave ranging)
+        \item Algoritmo de \alert{Localização 3D}
+        \item \alert{Tag RFID não-linear}
     \end{itemize}
 \end{frame}
 
