--- a/src/part3.tex
+++ b/src/part3.tex
@@ -87,24 +87,33 @@
         \item Uso legítimo do espectro
             \begin{itemize}
                 \item Legalidade na re-radiação harmônica
-                \item Legalidade no leitor
+                \item Legalidade no emissor
             \end{itemize}
         \item Limitações no intervalo de leitura
         \item Custo da tecnologia
     \end{itemize}
 \end{frame}
 
-\section{Conclusão}
+\subsection{Conclusão}
 
 \begin{frame}
-  \frametitle{Conclusão}
+  \frametitle{Conclusão: Contribuições Principais}
 
-        \begin{itemize}
-    \item Sistema de localização 3D em tempo real
-                \begin{itemize}
-      \item Erro médio de 3.5cm
-                        \item Latência média de 0.155seg
-                \end{itemize}
-                \item Não necessita de nenhum movimento relativo ou nós de referência
-        \end{itemize}
+    Monitorar a posição de etiquetas RFID no espaço 3D:
+
+    \begin{itemize}
+      \item Com \alert{alta precisão} (erro de $3.5$cm)
+      \item Em \alert{tempo real}: latência de $0.155$s
+      \item Funciona em \alert{ambientes fechados e cheios de objetos}
+      \item \alert{Não requer movimento relativo} ou \alert{nós de referência}
+    \end{itemize}
+
+    Hardware \& software co-design:
+
+    \begin{itemize}
+        \item \alert{Combinação de frequências}
+        \item \alert{Modificações no algoritmo HMFCW}
+        \item Algoritmo de \alert{Localização 3D}
+        \item \alert{Tag RFID não-linear}
+    \end{itemize}
 \end{frame}
